# qa_py_mobile

./: config.browserstack.env  config.local.env  config.py  pyproject.toml  requirements.txt
tests/: conftest.py  test_wikipedia.py
tests/android/: test_wikipedia.py
wikipedia/extension/selene/: patch_selector.py
wikipedia/model/: app.py
wikipedia/util/: attachments.py
wikipedia/utils/: __init__.py  file.py
wikipedia/utils/allure/: attach.py
wikipedia/utils/browserstack/: get.py
wikipedia/utils/python/: monkey.py
wikipedia/utils/selene/: patch_selector.py
