[tool.poetry]
name = "qa-python-day-19-mobile"
version = "0.1.0"
description = ""
authors = ["snezhanata <111530556+snezhanata@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "qa_python_day_19_mobile"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
selene = {version = "^2.0.0-beta.16", allow-prereleases = true}
allure-pytest = "^2.11.1"
appium-python-client = "^2.7.1"
pytest-xdist = "^3.0.2"
requests = "^2.28.1"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"
black = {extras = ["d"], version = "^22.10.0"}

[tool.pytest.ini_options]
addopts = "--alluredir allure-results --clean-alluredir "

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
